[gd_scene load_steps=7 format=3 uid="uid://d21mpe4r0ilv4"]

[ext_resource type="Script" uid="uid://b4k52lc462652" path="res://Hazards/big_chungus.gd" id="1_mc4ut"]
[ext_resource type="Texture2D" uid="uid://c2e287bm52knm" path="res://Assets/Sprites/Fatty normal.png" id="2_8k0ww"]
[ext_resource type="Texture2D" uid="uid://yfcj4udepxwd" path="res://Assets/Sprites/Fatty smiling.png" id="3_h7til"]
[ext_resource type="PackedScene" uid="uid://dytwcxut67ivy" path="res://Scenes/kill_zone.tscn" id="4_qqm70"]

[sub_resource type="SpriteFrames" id="SpriteFrames_287tu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8k0ww")
}],
"loop": true,
"name": &"Base",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_h7til")
}],
"loop": true,
"name": &"Kill",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8uwv"]
size = Vector2(16, 16)

[node name="Big_Chungus" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_mc4ut")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(7.125, -16)
scale = Vector2(0.992188, 1)
sprite_frames = SubResource("SpriteFrames_287tu")
animation = &"Kill"
autoplay = "Base"

[node name="Kill_zone" parent="." instance=ExtResource("4_qqm70")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kill_zone"]
position = Vector2(8, -8)
shape = SubResource("RectangleShape2D_k8uwv")

[node name="RayCast_Right" type="RayCast2D" parent="."]
position = Vector2(8, -8)
target_position = Vector2(10, 9)

[node name="RayCast_Left" type="RayCast2D" parent="."]
position = Vector2(8, -8)
target_position = Vector2(-10, 9)

[node name="RayCast_Left_wall" type="RayCast2D" parent="." groups=["Enemies"]]
position = Vector2(8, -8)
target_position = Vector2(-9, 0)

[node name="RayCast_Right_wall" type="RayCast2D" parent="." groups=["Enemies"]]
position = Vector2(8, -8)
target_position = Vector2(9, 0)

[node name="RayCast_Left_wall2" type="RayCast2D" parent="." groups=["Enemies"]]
position = Vector2(8, -12)
target_position = Vector2(-9, 0)

[node name="RayCast_Right_wall2" type="RayCast2D" parent="." groups=["Enemies"]]
position = Vector2(8, -12)
target_position = Vector2(9, 0)

[node name="RayCast_Left_wall3" type="RayCast2D" parent="." groups=["Enemies"]]
position = Vector2(8, -3.5)
target_position = Vector2(-9, 0)

[node name="RayCast_Right_wall3" type="RayCast2D" parent="." groups=["Enemies"]]
position = Vector2(8, -3.5)
target_position = Vector2(9, 0)

[node name="RayCast_Left_wall4" type="RayCast2D" parent="." groups=["Enemies"]]
position = Vector2(8, -15)
target_position = Vector2(-9, 0)

[node name="RayCast_Right_wall4" type="RayCast2D" parent="." groups=["Enemies"]]
position = Vector2(8, -15)
target_position = Vector2(9, 0)

[node name="RayCast_Left_wall5" type="RayCast2D" parent="." groups=["Enemies"]]
position = Vector2(8, -1)
target_position = Vector2(-9, 0)

[node name="RayCast_Right_wall5" type="RayCast2D" parent="." groups=["Enemies"]]
position = Vector2(8, -1)
target_position = Vector2(9, 0)

[connection signal="body_entered" from="Kill_zone" to="." method="_on_kill_zone_body_entered"]
